# libuis

./: CMakeLists.txt  README.md
cmake/: FindTcmalloc.cmake
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/libuis/: CMakeLists.txt  global_ctx.cpp  global_ctx.h  link.cpp  link.h  uis.cpp  uis.h
src/libuis/common/: defines.h  stats.h
src/libuis/kern/: CMakeLists.txt  bpf.c  printk.h
src/libuis/util/: bpf_map.h  xsk_socket.h
